YMLの書き方を修正しました。

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: notes | 沼田 哲史のノート
-description: このサイトでは、沼田が授業時間だけでは語りきれない思考法や学習法、そして人生全般にわたる話題をエッセイ風に共有していきます。
+title: "notes | 沼田 哲史のノート"
+description: "このサイトでは、沼田が授業時間だけでは語りきれない思考法や学習法、そして人生全般にわたる話題をエッセイ風に共有していきます。""
 
 
